// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.api.v2alpha.event_group_metadata.testing;

import "wfa/measurement/api/v2alpha/event_annotations.proto";

option java_package = "org.wfanet.measurement.api.v2alpha.event_group_metadata.testing";
option java_multiple_files = true;

message TestMetadataMessage {
  message Name {
    option (.wfa.measurement.api.v2alpha.event_field) = {
      display_name: "Name"
    };

    string value = 1;
  }

  message Age {
    option (.wfa.measurement.api.v2alpha.event_field) = {
      display_name: "Age"
    };

    int32 value = 1;
  }

  message Duration {
    option (.wfa.measurement.api.v2alpha.event_field) = {
      display_name: "Duration"
    };

    int32 value = 1;
  }

  Name name = 1;
  Age age = 2;
  Duration duration = 3;
}